package org.atu

enum class CarAvailability{
    Available,
    Unavailable
}